# test-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/settings/: base.py  dev.py  prod.py
department/: models.py  responses.py  serializers.py  tests.py  urls.py  utils.py  views.py
department/migrations/: 0001_initial.py  0002_alter_employee_department.py
