[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.3.1",
    "daphne>=4.2.0",
    "django>=5.2.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.0",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.29.0",
    "drf-yasg>=1.21.10",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
]
